#288: Goal Data Storage
Features:

* On Goal creation and deletions data points with the dataType `goal-configuration` are written to the Elastic index
* The DataWebservice was extended so that GoalData are written correctly.

See #324 for the specification

Changes:

* GoalTemplates provided by the GoalConfig controller now use the `goaltemplate-` ID prefix
* Goals provided by the Goal controller now use the `goal-` ID prefix. Also referenced templates do use the `goaltemplate-` ID prefix
* The internal Model classes have new `getExternalId` methods. The normal getter and setter do not use the prefixes
* The DataPoints do no longer set the dataType to the observationType. The Webservice model was extended to include an optional dataType. If this is set it is used. If not the observationType is still set for backward compatibility
* The `observaitonId` now supports `<observation-id>[:<instance-id>]`. The `instance-id` allows to refer a specific observation in cases where participants are allowed to create multiple instances of an observation. This is exactly whats happens for Goals. So if the `observation-id` refers to a goal template the value of the `instance-id` is mapped to the `goal-id`
* The ExternalAPI now also supports a `dataType`. However no Goal Support was added to this API.

BugFixes:

* Fixed the SecurityConfiguration where the leading `/` was missing for the `/goal/api/v1/**` path
* added the ConflictException to the ControllerExceptionHandler. Now the correct 409 state is returned if this Exception is thrown (was 500)
